# coursework_5

./: README.md  main.py  pyproject.toml
src/: 2_criteria_create_bd_and_table.py  DBManager.py  criteria_create_bd_and_table.py  help_func.py  hh_api.py
